[gd_scene load_steps=8 format=2]

[ext_resource path="res://common/fighters/spider1.tscn" type="PackedScene" id=1]
[ext_resource path="res://common/fighters/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://common/ui/lifeBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://screens/tree-village/images/background.png" type="Texture" id=4]
[ext_resource path="res://screens/macro-map/spiderFight.gd" type="Script" id=5]
[ext_resource path="res://common/gamePad/fight.tscn" type="PackedScene" id=6]

[sub_resource type="TileSet" id=1]
0/name = "background.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 96, 96 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 96, 96 )
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 85.0283, 88.2986 )

[node name="spider1" parent="." instance=ExtResource( 1 )]
position = Vector2( 199.115, 51.272 )

[node name="lifePlayer" parent="." instance=ExtResource( 3 )]
margin_left = 8.96682
margin_top = 14.1581
margin_right = 8.96682
margin_bottom = 14.1581

[node name="lifeSpider" parent="." instance=ExtResource( 3 )]
margin_left = 200.946
margin_top = 13.6862
margin_right = 200.946
margin_bottom = 13.6862

[node name="gamepad" parent="." instance=ExtResource( 6 )]

[connection signal="attackFinished" from="player" to="." method="_on_player_attackFinished"]
[connection signal="damageFinished" from="player" to="." method="_on_player_damageFinished"]
[connection signal="dieFinished" from="player" to="." method="_on_player_dieFinished"]
[connection signal="attackFinished" from="spider1" to="." method="_on_spider1_attackFinished"]
[connection signal="damageFinished" from="spider1" to="." method="_on_spider1_damageFinished"]
[connection signal="dieFinished" from="spider1" to="." method="_on_spider1_dieFinished"]
[connection signal="attack" from="gamepad" to="." method="_on_gamepad_attack"]
[connection signal="leave" from="gamepad" to="." method="_on_gamepad_leave"]
